[tool.poetry]
name = "pyspark-ds-toolbox"
version = "0.1.0"
description = "A Pyspark companion for data science tasks."
authors = ["vinicius.sousa <vinisousa04@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
pyspark = "^3.1.1"
pandas = "^1.3.4"
typeguard = "^2.13.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
notebook = "^6.4.6"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
