[tool.poetry]
name = "pyspark-ds-toolbox"
version = "0.3.3"
description = "A Pyspark companion for data science tasks."
authors = ["vinicius.sousa <vinisousa04@gmail.com>"]
license = "GPL-3.0-only"
documentation = "https://viniciusmsousa.github.io/pyspark-ds-toolbox/index.html"
repository = "https://github.com/viniciusmsousa/pyspark-ds-toolbox"
readme = 'README.md'


[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
pyspark = ">=3.2"
pandas = "^1.3.4"
typeguard = "^2.13.2"
numpy = "1.21.0"
h2o = "^3.34.0"
pyarrow = "^6.0.1"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
mlflow = "^1.22.0"
tqdm = "^4.62.3"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
notebook = "^6.4.6"
jupyter = "^1.0.0"
Sphinx = "4.2"
sphinx-rtd-theme = "^1.0.0"
myst-parser = "^0.15.2"
sphinx-toolbox = "^2.15.1"
coverage = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
